hydra/test/test_examples/type_errors/list_push2.tpc
init {
    bool[10] x = [true,false];
    x.push(x);
} 
telemetry {} 
check {}